refactor(user-service): start updating the architecture of user-service, bring minor fixes to catalog-service swagger
